@@ -98,7 +98,7 @@ always_use_original_graphics = false
 
 
 [AdditionalFeatures]
-; Enable quicksave/load feature. (In-game: press F6 to quicksave, F9 to quickload)
+; Enable quicksave/load feature. (In-game: press F1..F5 to quicksave, F6..F10 to quickload)
 enable_quicksave = true
 
 ; Try to let time keep running out when quickloading. (similar to Ctrl+A)
